--- a/www/index.html
+++ b/www/index.html
@@ -451,8 +451,7 @@
     <script type="text/javascript" src="assets/js/jquery.touchSwipe.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.form.js"></script>
 
-    <!-- GOOGLE MAPS -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-3RCQBVIkNi9PsHWT60NCI4w4yoi48FQ&libraries=places&callback=initAutocomplete" async defer></script>
+  
 
 
     <script src="assets/js/dist/jquery.inputmask.bundle.js"></script>
@@ -465,7 +464,11 @@
     <script src="views/Views.js"></script> <!-- HTML'S -->
 
     <script type="text/javascript" src="app.js"></script> <!-- SCRIPT GERAL DA APLICACAO -->
-
+    <script>
+      $("footer").hide();
+            $("header .menu-bar-toggle").hide();
+            $("#menuProfileToggle").hide();
+    </script>
     <!-- <script data-consolejs-channel="4eb78d5b-5387-1231-567c-f8be08248918" src="https://remotejs.com/agent/agent.js"></script>-->
     
 </body>
